# Sequential-f-allocator

./: .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Test  allocate.c  allocate.s  cmake_install.cmake  main.c
